--- a/package.json
+++ b/package.json
@@ -1,16 +1,20 @@
 {
   "name": "react-babel-webpack-boilerplate",
-  "version": "1.4.1",
+  "version": "1.0.0",
   "description": "A boilerplate for React-Babel-Webpack project",
   "main": "app/main.jsx",
+  "browserslist": [
+    "> 5% in CN",
+    "not ie < 8"
+  ],
   "scripts": {
     "precommit": "npm run lint",
     "lint": "eslint --cache --ignore-path .gitignore --ext .jsx,.js --format=node_modules/eslint-formatter-pretty .",
     "test": "npm run lint",
     "build": "webpack",
-    "start": "webpack-dev-server --devtool eval --progress --hot --content-base app",
+    "start": "webpack",
     "deploy": "NODE_ENV=production webpack --config webpack.production.config.js",
-    "deploy-windows": "SET NODE_ENV=production & webpack --config webpack.production.config.js"
+    "pub": "SET NODE_ENV=production & webpack --config webpack.production.config.js"
   },
   "dependencies": {
     "babel-runtime": "6.x",
@@ -19,6 +23,7 @@
     "react-router": "^4.1.1"
   },
   "devDependencies": {
+    "autoprefixer": "^7.1.1",
     "babel-core": "6.x",
     "babel-eslint": "7.x",
     "babel-loader": "6.x",
@@ -27,11 +32,8 @@
     "babel-preset-react": "6.x",
     "babel-preset-stage-0": "6.x",
     "clean-webpack-plugin": "^0.1.16",
-    "commitizen": "^2.9.3",
-    "conventional-changelog-cli": "1.x",
     "copy-webpack-plugin": "latest",
     "css-loader": "~0.26.1",
-    "cz-conventional-changelog": "^1.2.0",
     "eslint": "latest",
     "eslint-config-airbnb": "latest",
     "eslint-formatter-pretty": "^1.1.0",
@@ -40,14 +42,17 @@
     "eslint-plugin-jsx-a11y": "3.x",
     "eslint-plugin-promise": "^3.4.0",
     "eslint-plugin-react": "latest",
+    "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.11.1",
     "html-webpack-plugin": "^2.28.0",
     "husky": "^0.12.0",
+    "less": "^2.7.2",
     "less-loader": "^4.0.3",
+    "less-plugin-autoprefix": "^1.5.1",
     "open-browser-webpack-plugin": "0.0.3",
+    "postcss-loader": "^2.0.5",
     "style-loader": "~0.13.1",
     "url-loader": "^0.5.8",
-    "validate-commit-msg": "2.x",
     "webpack": "latest",
     "webpack-bundle-analyzer": "^2.8.2",
     "webpack-dashboard": "^0.4.0",
@@ -59,25 +64,5 @@
     "web app",
     "boilerplate"
   ],
-  "license": "MIT",
-  "config": {
-    "validate-commit-msg": {
-      "types": [
-        "feat",
-        "fix",
-        "docs",
-        "style",
-        "refactor",
-        "perf",
-        "test",
-        "chore",
-        "revert"
-      ],
-      "warnOnFail": false,
-      "maxSubjectLength": 100
-    },
-    "commitizen": {
-      "path": "node_modules/cz-conventional-changelog"
-    }
-  }
+  "license": "MIT"
 }
