--- a/package.json
+++ b/package.json
@@ -12,15 +12,20 @@
     "lint": "eslint --cache --ignore-path .gitignore --ext .jsx,.js --format=node_modules/eslint-formatter-pretty .",
     "test": "npm run lint",
     "build": "webpack",
-    "start": "webpack-dev-server --devtool eval --progress --hot --content-base app",
+    "start": "webpack-dev-server --devtool source-map --progress --hot --content-base src",
     "deploy": "NODE_ENV=production webpack --config webpack.production.config.js",
     "pub": "SET NODE_ENV=production & webpack --config webpack.production.config.js"
   },
   "dependencies": {
+    "antd": "^2.10.2",
     "babel-runtime": "6.x",
+    "prop-types": "^15.5.10",
     "react": "15.x",
+    "react-addons-css-transition-group": "^15.5.2",
     "react-dom": "15.x",
-    "react-router": "^4.1.1"
+    "react-router": "^4.1.1",
+    "react-router-dom": "^4.1.1",
+    "react-transition-group": "^1.1.3"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.1",
