react-router文档例子使用成功 代码拆分按需加载成功 echarts使用成功 开发版本路径问题解决，发布版本需要后端配合

--- a/.eslintrc
+++ b/.eslintrc
@@ -39,7 +39,12 @@
     "promise/param-names": 2,
     "promise/always-return": 2,
     "promise/catch-or-return": 2,
-    "promise/no-native": 0
+    "promise/no-native": 0,
+
+    "no-continue": 0,
+    "no-trailing-spaces": 0,
+    "react/prop-types": 0,
+    "import/no-webpack-loader-syntax": 0
   },
   "plugins": [
     "compat",
