--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   },
   "dependencies": {
     "antd": "^2.10.2",
+    "axios": "^0.16.1",
     "babel-runtime": "6.x",
+    "echarts": "^3.6.1",
     "prop-types": "^15.5.10",
     "react": "15.x",
     "react-addons-css-transition-group": "^15.5.2",
@@ -36,6 +38,7 @@
     "babel-preset-es2015": "6.x",
     "babel-preset-react": "6.x",
     "babel-preset-stage-0": "6.x",
+    "bundle-loader": "^0.5.5",
     "clean-webpack-plugin": "^0.1.16",
     "copy-webpack-plugin": "latest",
     "css-loader": "~0.26.1",
